--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -9,7 +9,7 @@
 }
 
 /* CONTENT IS CLOSE */
-.chatbox__support, .chatbox__support1, .chatbox__support2 {
+.chatbox__support, .chatbox__support1, .chatbox__support2, .chatbox__support3, .chatbox__support4 {
     display: flex;
     flex-direction: column;
     position: fixed;
