--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7345,7 +7345,7 @@ Media Query
 }
 
 /* chat */
-.chatbox__support,.chatbox__support1, .chatbox__support2 {
+.chatbox__support,.chatbox__support1, .chatbox__support2, .chatbox__support3, .chatbox__support4 {
     background: #f9f9f9;
     height: 450px;
     width: 350px;
