--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7422,6 +7422,7 @@ Media Query
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     margin-top: 20px;
+    /* position: fixed; */
 }
 
 .chatbox__footer input {
