--- a/public/css/style_chat.css
+++ b/public/css/style_chat.css
@@ -103,6 +103,7 @@ body {
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
     margin-top: 20px;
+    /* position: fixed; */
 }
 
 .chatbox__footer input {
