update move close btn to right side

--- a/public/css/style_chat.css
+++ b/public/css/style_chat.css
@@ -48,7 +48,10 @@ body {
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
     box-shadow: var(--primaryBoxShadow);
+    text-align: right;
 }
+
+ 
 
 .chatbox__image--header {
     margin-right: 10px;
@@ -141,10 +144,11 @@ body {
     border: none;
     /* padding: 15px 20px; */
     color: antiquewhite;
-    text-align: center;
+    text-align: right;
     text-decoration: none;
     display: inline-block;
     font-size: 14px;
+    margin-left: 250px;
     /* margin: 4px 2px; */
     cursor: pointer;
 }
