--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -15,7 +15,8 @@
  
 
 /* CONTENT IS CLOSE */
- .chatbox__support4, .chatbox__support5, .chatbox__support9, .chatbox__support10, .chatbox__support1_7, .chatbox__support18 {
+ .chatbox__support4, .chatbox__support9, .chatbox__support10, .chatbox__support1_7, .chatbox__support18, .chatbox__support6, .chatbox__support7
+ , .chatbox__support8{
     display: flex;
     flex-direction: column;
     position: fixed;
