--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -33,7 +33,7 @@
 /* CONTENT ISOPEN */
 .chatbox--active {
     transform: translateY(-40px);
-    z-index: 123456;
+    /* z-index: 123456; */
     opacity: 1;
     
 }
