update css and display

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7065,7 +7065,7 @@ Media Query
         display: inline-block;
         max-width: 90%;
         margin-bottom: 5px;
-        font-size: 1vw;
+        font-size: 14px;
         color: #71748d;
     }
   /*--------- dashboard-product-single -------- */
