--- a/public/css/style_chat.css
+++ b/public/css/style_chat.css
@@ -30,16 +30,18 @@ body {
 , .chatbox__support8 {
     background: #f9f9f9;
     height: 450px;
-    width: 350px;
+    width: 1px;
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
 
-/* .chatbox--active{
+.chatbox--active{
+    width: 450px;
+    opacity: 100;
     z-index: 50;
-    position:relative;
-} */
+    width: 300px;
+}
 
 /* HEADER */
 .chatbox__header {
