update redict and veriflied table

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11137,3 +11137,7 @@ a.text-dark:focus {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
 }
+
+.verfly-all-users{
+  margin-left: 3% !important;
+}
