--- a/public/css/popupInfo.css
+++ b/public/css/popupInfo.css
@@ -1,4 +1,11 @@
+/* btn action */ 
+.button-myBtn {
+  color: #636b6f;
+  background-color:#00000000;
+  border: #00000000;
+}
 /* The Modal (background) */
+
 .modal {
     display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
@@ -28,6 +35,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    margin-left: 97%;
   }
   
   .close1:hover,
@@ -44,6 +52,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    margin-left: 97%;
   }
   
   .close2:hover,
@@ -60,6 +69,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    margin-left: 97%;
   }
   
   .close3:hover,
@@ -77,6 +87,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    margin-left: 97%;
   }
   
   .close4:hover,
@@ -92,6 +103,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    margin-left: 97%;
   }
   
   .close5:hover,
@@ -109,6 +121,7 @@
     float: right;
     font-size: 28px;
     font-weight: bold;
+    margin-left: 97%;
   }
   
   .close6:hover,
