update center to left

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4540,7 +4540,7 @@ Pills vertical
     color: #3d405c;
     /* font-family: 'Circular Std Medium'; */
     font-family: 'Mitr';
-    text-align: center;
+    text-align: left;
 }
 
 /* .table-bordered {
