--- a/public/css/style1.css
+++ b/public/css/style1.css
@@ -4522,7 +4522,7 @@ Pills vertical
     color: #3d405c;
     /* font-family: 'Circular Std Medium'; */
     font-family: 'Mitr';
-    text-align: center;
+    text-align: left;
 }
 
 /* .table-bordered {
@@ -7038,7 +7038,7 @@ Media Query
         display: inline-block;
         max-width: 90%;
         margin-bottom: 5px;
-        font-size: 1vw;
+        font-size: 12px;
         color: #71748d;
     }
   /*--------- dashboard-product-single -------- */
